# GCJQualification2016Haskell

./: README.md
problemA/: round1Aa.cabal
problemA/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/doc/round1Aa-0.1.0.0/: LICENSE
problemA/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/flag-cache/: round1Aa-0.1.0.0-385eeb88d0e41d2299a6d7aed9505277
problemA/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/lib/x86_64-linux-ghc-7.10.3/round1Aa-0.1.0.0-FnEiIblqgXXLhoo0euxwfO/: Boilerplate.dyn_hi
problemA/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/pkgdb/: package.cache  round1Aa-0.1.0.0-385eeb88d0e41d2299a6d7aed9505277.conf
problemA/app/: Main.hs
problemA/src/: DataTypes.hs
problemB/: INSTALL  round1Ab.cabal
problemC/: round1Ac.cabal
problemC/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/flag-cache/: arithmoi-0.4.1.3-927ae5b2719abfb8d277812bb97d6a1e  gcj-qualification-round-c-0.1.0.0-017f4485da365a8631b8dc9aa1aba66f  gcj-qualification-round-c-0.1.0.0-c13c1cd21a9b9b4cee2c42b36081ac29  random-1.1-c46cc413d88c0a330b5495d03f0ed464
problemC/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/lib/x86_64-linux-ghc-7.10.3/arithmoi-0.4.1.3-C4c4JmqdUJaEBNAlRHjNlW/Math/NumberTheory/: GCD.dyn_hi  GCD.hi  Logarithms.dyn_hi  Logarithms.hi  Lucas.dyn_hi  Lucas.hi  Moduli.dyn_hi  Moduli.hi  MoebiusInversion.dyn_hi  MoebiusInversion.hi  Powers.dyn_hi  Powers.hi  Primes.dyn_hi  Primes.hi  Utils.dyn_hi  Utils.hi
problemC/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/lib/x86_64-linux-ghc-7.10.3/arithmoi-0.4.1.3-C4c4JmqdUJaEBNAlRHjNlW/Math/NumberTheory/GCD/: LowLevel.dyn_hi  LowLevel.hi
problemC/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/lib/x86_64-linux-ghc-7.10.3/gcj-qualification-round-c-0.1.0.0-CNpVupVDhUL3xmmT0zJifn/: Boilerplate.dyn_hi  DataTypes.dyn_hi  DataTypes.hi
problemC/.stack-work/install/x86_64-linux/lts-5.11/7.10.3/pkgdb/: arithmoi-0.4.1.3-927ae5b2719abfb8d277812bb97d6a1e.conf  gcj-qualification-round-c-0.1.0.0-017f4485da365a8631b8dc9aa1aba66f.conf  package.cache
problemC/app/: Main.hs
problemC/src/: Boilerplate.hs  DataTypes.hs
(+57 files in other folders)
