name:                round1Aa
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/snthibaud/gcj-qualification-round-a#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Thibaud
maintainer:          snthibaud@gmail.com
copyright:           2016 Stéphane Thibaud
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Boilerplate, DataTypes
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable gcj-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , round1Aa
                     , parsec
  default-language:    Haskell2010
